--- a/aboutus.html
+++ b/aboutus.html
@@ -72,7 +72,7 @@
     </header>
 
     <div class="about-us-container">
-        <img src="kylix.png" alt="Kylix Logo" id="about-us-logo">
+        <img src="Source/kylix.png" alt="Kylix Logo" id="about-us-logo">
         <h1 id="h1_style">Team Kylix</h1>
         <hr>
         <div class="about-us-content">
