--- a/art.html
+++ b/art.html
@@ -119,9 +119,8 @@
     
     <div class="top">
         <div class="banner">
-            <div class="banner">
-                <img src="Source/Open sesame.png" alt="banner">
-                <div class="banner_text">To know about your full payment</div>
+            <img src="Source/Open sesame.png" alt="banner">
+            <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
     <div class="middle">
@@ -144,7 +143,7 @@
         <p style="font-size: larger;"><b>The Art Gallery Competition of 2024, organized by the Brotherhood Department of Social Sciences of BA 23' within the Faculty of Humanities and Social Sciences</b>, showcased remarkable artistic talent and cultural enrichment. Participants exhibited their creativity, fostering a vibrant atmosphere of innovation and expression. The event facilitated interdisciplinary dialogue, celebrating diverse perspectives through art. It stood as a testament to the enduring significance of the arts in enriching society.</p>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="art2.jpg" alt="Event 1">
+                <img src="Source/art2.jpg" alt="Event 1">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>Event 1</h3>
@@ -153,7 +152,7 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="art 1.jpg" alt="Event 2">
+                <img src="Source/art 1.jpg" alt="Event 2">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>Event 2</h3>
@@ -162,7 +161,7 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="art3.jpg" alt="Event 2">
+                <img src="Source/art3.jpg" alt="Event 2">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>Event 2</h3>
@@ -171,7 +170,7 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="art6.jpg" alt="Event 2">
+                <img src="Source/art6.jpg" alt="Event 2">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>Event 2</h3>
@@ -180,7 +179,7 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="art8.jpg" alt="Event 2">
+                <img src="Source/art7.jpg" alt="Event 2">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>Event 2</h3>
