--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
     
     <div class="top">
         <div class="banner">
-            <img src="Open sesame.png" alt="banner">
+            <img src="Source/Open sesame.png" alt="banner">
             <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
@@ -111,14 +111,14 @@
         <div class="event-container">
             <!-- Event 1 -->
             <div class="event-card">
-                <img src="SoftFest.jpg" alt="Event 1" class="event-image">
+                <img src="Source/SoftFest.jpg" alt="Event 1" class="event-image">
                 <h3><center>SOFTFEST</center></h3>
                 <p class="event-description"><a href="softfest.html">Click to know more..</a></p>
             </div>
 
             <!-- Event 2 -->
             <div class="event-card">
-                <img src="art 1.jpg" class="event-image">
+                <img src="Source/Artgallery.jpg" class="event-image">
                 <h3><center>ART GALLERY</center></h3>
                 <p class="event-description"><a href="art.html">Click to know more..</a></p>
             </div>
