--- a/article.html
+++ b/article.html
@@ -14,7 +14,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Initial text
-            document.querySelector('.banner_text').innerText = "To know about your full payment";
+            document.querySelector('.banner_text').innerText = "To know about your payment";
 
             // Array of messages to loop through
             const messages = [
@@ -39,7 +39,7 @@
 
     <div class="top">
         <div class="banner">
-            <img src="Open sesame.png" alt="banner">
+            <img src="Source/Open sesame.png" alt="banner">
             <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
