--- a/events.html
+++ b/events.html
@@ -61,7 +61,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
-            document.querySelector('.banner_text').innerText = "To know about your full payment";
+            document.querySelector('.banner_text').innerText = "To know about your payment";
     
             // Array of messages to loop through
             const messages = [
