--- a/art.html
+++ b/art.html
@@ -94,7 +94,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
-            document.querySelector('.banner_text').innerText = "To know about your full payment";
+            document.querySelector('.banner_text').innerText = "To know about your payment";
     
             // Array of messages to loop through
             const messages = [
