--- a/Home.html
+++ b/Home.html
@@ -13,13 +13,13 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
-            document.querySelector('.banner_text').innerText = "To know about your payment";
+            document.querySelector('.banner_text').innerText = "To know about your payments";
 
             // Array of messages to loop through
             const messages = [
-                "To know about  university",
-                "To know about  events",
-                "To know about  degree"
+                "To know about your university",
+                "To know about all events",
+                "To know about all degrees"
             ];
 
             let index = 0;
@@ -42,6 +42,7 @@
             <div class="banner_text">To know about your payment</div>
         </div>
     </div>
+    
     <div class="middle">
         General Inquiries: (+94) 011 2881 000
         Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
