--- a/events.html
+++ b/events.html
@@ -65,9 +65,9 @@
     
             // Array of messages to loop through
             const messages = [
-                "To know about  university",
-                "To know about  events",
-                "To know about  degree"
+                "To know about your university",
+                "To know about all events",
+                "To know about all degrees"
             ];
     
             let index = 0;
