--- a/article.html
+++ b/article.html
@@ -66,35 +66,35 @@
         <div class="faculty_container">
             <div class="faculty_section">
                 <img src="Source/Open sesame.png" class="faculty_bg">
-                <h3><a href="fo_education.html">
+                <h3><a href="Contents/fo_education.html">
                         <center>The Faculty of Education</center>
                     </a></h3>
             </div>
 
             <div class="faculty_section">
                 <img src="Source/Open sesame.png" class="faculty_bg">
-                <h3><a href="fo_engineering.html">
+                <h3><a href="Contents/fo_engineering.html">
                         <center>The Faculty of Engineering</center>
                     </a></h3>
             </div>
 
             <div class="faculty_section">
                 <img src="Source/Open sesame.png" class="faculty_bg">
-                <h3><a href="fo_health_sc.html">
+                <h3><a href="Contents/fo_health_sc.html">
                         <center>The Faculty of Health Science</center>
                     </a></h3>
             </div>
 
             <div class="faculty_section">
                 <img src="Source/Open sesame.png" class="faculty_bg">
-                <h3><a href="fo_humanities_ss.html">
+                <h3><a href="Contents/fo_humanities_ss.html">
                         <center>The Faculty of Humanities & Social Science</center>
                     </a></h3>
             </div>
 
             <div class="faculty_section">
                 <img src="Source/Open sesame.png" class="faculty_bg">
-                <h3><a href="fo_natural_sc.html">
+                <h3><a href="Contents/fo_natural_sc.html">
                         <center>The Faculty of Natural Sciences</center>
                     </a></h3>
             </div>
