--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="NativeStyle.css">
+    <link rel="stylesheet" href="Contents/SlideShow.css">
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
@@ -62,7 +63,7 @@
     <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-            <img src="Source/bracelets-scaled.jpg" style="width:100%">
+            <img src="Source/slide 1@0.5x.png" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
 
