--- a/Home.html
+++ b/Home.html
@@ -63,18 +63,23 @@
     <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-            <img src="Source/slide 1@0.5x.png" style="width:100%">
+            <img src="Source/slide 1@0.75x.png" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
-            <img src="Source/s-l1200.jpg" style="width:100%">
+            <img src="Source/Slide 2@0.75x.png" style="width:100%">
             <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
-            <img src="Source/61XtkQ6S75L._AC_UY1000_.jpg" style="width:100%">
+            <img src="Source/Slide 3@0.75x.png" style="width:100%">
             <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="Source/Slide 4@0.75x.png" style="width:100%">
+            <div class="text">Caption four</div>
         </div>
 
         <!-- Next and previous buttons -->
@@ -88,6 +93,7 @@
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
     </div>
 
     <script>
@@ -102,14 +108,17 @@
                 slides[i].style.display = "none";
             }
             slideIndex++;
-            if (slideIndex > slides.length) { slideIndex = 1 }
+            if (slideIndex >= slides.length) { slideIndex = 0; }
             for (i = 0; i < dots.length; i++) {
                 dots[i].className = dots[i].className.replace(" active", "");
             }
-            slides[slideIndex - 1].style.display = "block";
-            dots[slideIndex - 1].className += " active";
-            setTimeout(showSlides, 3000); // Change image every 5 seconds
+            slides[slideIndex].style.display = "block";
+            dots[slideIndex].className += " active";
+            setTimeout(showSlides, 3000); // Change image every 3 seconds
         }
+
+
+
     </script>
 </body>
 
