Slide Show update

--- a/Home.html
+++ b/Home.html
@@ -117,6 +117,31 @@
             setTimeout(showSlides, 3000); // Change image every 3 seconds
         }
 
+        function plusSlides(n) {
+            showSlidesByIndex(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlidesByIndex(slideIndex = n);
+        }
+
+        function showSlidesByIndex(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n >= slides.length) { slideIndex = 0; }
+            if (n < 0) { slideIndex = slides.length - 1; }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex].style.display = "block";
+            dots[slideIndex].className += " active";
+        }
+
+
 
 
     </script>
