--- a/Home.html
+++ b/Home.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="NativeStyle.css">
     <link rel="stylesheet" href="Contents/SlideShow.css">
+    <link rel="stylesheet" href="Contents/ArticalSlideShow.css">
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
@@ -141,10 +142,8 @@
             dots[slideIndex].className += " active";
         }
 
-
-
-
     </script>
+
 </body>
 
 </html>
