Home page update

--- a/Home.html
+++ b/Home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="NativeStyle.css">
     <link rel="stylesheet" href="Contents/SlideShow.css">
     <link rel="stylesheet" href="Contents/ArticalSlideShow.css">
+    <link rel="stylesheet" href="Contents/PostShow.css">
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
@@ -143,6 +144,16 @@
         }
 
     </script>
+
+    <div class="photo-square" style="--animation-speed: 10s; --photo-size: 200px;">
+        <div class="photo-container">
+            <img src="Source/art 1.jpg" alt="Photo 1" onclick="location.href='events.html';">
+            <img src="Source/art2.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art3.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art4.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <!-- Add more images with onclick attributes -->
+        </div>
+    </div>
 
 </body>
 
