update aboutus - Logo to the peak

--- a/aboutus.html
+++ b/aboutus.html
@@ -96,6 +96,27 @@
     </header>
 
     <div class="about-us-container">
+        <img src="Source/kylix.png" alt="Kylix Logo" id="about-us-logo">
+
+        <div id="logoLetters">
+            <span style="animation-delay:0.2s ;" class="logoLetter">T</span>
+            <span style="animation-delay:0.4s ;" class="logoLetter">e</span>
+            <span style="animation-delay:0.6s ;" class="logoLetter">a</span>
+            <span style="animation-delay:0.8s ;" class="logoLetter">m</span>
+            <span style="animation-delay:1s ;" class="logoLetter">&nbsp;</span>
+            <span style="animation-delay:1.2s ;" class="logoLetter">K</span>
+            <span style="animation-delay:1.4s ;" class="logoLetter">y</span>
+            <span style="animation-delay:1.6s ;" class="logoLetter">l</span>
+            <span style="animation-delay:1.8s ;" class="logoLetter">i</span>
+            <span style="animation-delay:2s ;" class="logoLetter">x</span>
+        </div>
+
+        <div id="slogan">
+            <p id="sloganParagraph">&lt;/&gt;&nbsp;Relax; it's only ONEs and ZEROs&nbsp;&lt;/&gt;</p>
+        </div>
+        
+        <!--Horizontal line-->
+        <hr>
 
         <div class="about-us-content">
             <h2 class="heading_font">Our Story</h2>
@@ -190,7 +211,7 @@
                 <!--Team member 03-->
                 <div class="member">
                     <!--Change your PP here--->
-                    <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
+                    <img src="https://avatars.githubusercontent.com/u/116507954?v=4"
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Kanzul Nuha</p>
@@ -204,7 +225,7 @@
                                 onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://www.instagram.com', '_blank');"
+                                onclick="window.open('https://www.instagram.com/kanzulnuha._?igsh=ZDExYjZkNGI0OA==', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
                                 onclick="window.open('https://www.linkedin.com', '_blank');"
@@ -321,27 +342,6 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <img src="Source/kylix.png" alt="Kylix Logo" id="about-us-logo">
-
-        <div id="logoLetters">
-            <span style="animation-delay:0.2s ;" class="logoLetter">T</span>
-            <span style="animation-delay:0.4s ;" class="logoLetter">e</span>
-            <span style="animation-delay:0.6s ;" class="logoLetter">a</span>
-            <span style="animation-delay:0.8s ;" class="logoLetter">m</span>
-            <span style="animation-delay:1s ;" class="logoLetter">&nbsp;</span>
-            <span style="animation-delay:1.2s ;" class="logoLetter">K</span>
-            <span style="animation-delay:1.4s ;" class="logoLetter">y</span>
-            <span style="animation-delay:1.6s ;" class="logoLetter">l</span>
-            <span style="animation-delay:1.8s ;" class="logoLetter">i</span>
-            <span style="animation-delay:2s ;" class="logoLetter">x</span>
-        </div>
-
-        <div id="slogan">
-            <p id="sloganParagraph">&lt;/&gt;&nbsp;Relax; it's only ONEs and ZEROs&nbsp;&lt;/&gt;</p>
-        </div>
-
-
     </div>
 
 
