--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="Contents/SlideShow.css">
     <link rel="stylesheet" href="Contents/ArticalSlideShow.css">
     <link rel="stylesheet" href="Contents/PostShow.css">
+    <link rel="stylesheet" href="Contents/Footer.css">
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
@@ -154,6 +155,39 @@
             <!-- Add more images with onclick attributes -->
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <p>Email: info@opensesame.lk</p>
+                <p>Phone: (+94) 011 2881 000</p>
+            </div>
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <div class="social-icons">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="Calculate.html">Calculate</a></li>
+                    <li><a href="article.html">Article</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Open Sesame. All rights reserved.</p>
+        </div>
+    </footer>
+    
 
 </body>
 
