--- a/events.html
+++ b/events.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="NativeStyle.css">
+    <link rel="stylesheet" href="Contents/Footer.css">
     <style>
         /* Styles for the event section */
         .event-section {
@@ -139,4 +140,37 @@
         <div class="event-title">Stay tuned for our upcoming events!</div>
        
     <!-- End of Event Section -->
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <p>Email: info@opensesame.lk</p>
+                <p>Phone: (+94) 011 2881 000</p>
+            </div>
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <div class="social-icons">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="Calculate.html">Calculate</a></li>
+                    <li><a href="article.html">Article</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Open Sesame. All rights reserved.</p>
+        </div>
+    </footer>
+    
 </body>
