--- a/Home.html
+++ b/Home.html
@@ -152,6 +152,14 @@
             <img src="Source/art2.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
             <img src="Source/art3.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
             <img src="Source/art4.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art 1.jpg" alt="Photo 1" onclick="location.href='events.html';">
+            <img src="Source/art2.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art3.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art4.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art 1.jpg" alt="Photo 1" onclick="location.href='events.html';">
+            <img src="Source/art2.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art3.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
+            <img src="Source/art4.jpg" alt="Photo 2" onclick="location.href='Calculate.html';">
             <!-- Add more images with onclick attributes -->
         </div>
     </div>
