--- a/Home.html
+++ b/Home.html
@@ -192,7 +192,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Open Sesame. All rights reserved.</p>
+            <p>&copy; 2024 Open Sesame. All rights reserved.122121323</p>
+            <p>&copy; 2024 Open Sesame. All rights reserved.122121323</p>
         </div>
     </footer>
     
