--- a/events.html
+++ b/events.html
@@ -66,7 +66,7 @@
     
             // Array of messages to loop through
             const messages = [
-                "To know about your university",
+                "To know about university",
                 "To know about all events",
                 "To know about all degrees"
             ];
