--- a/Home.html
+++ b/Home.html
@@ -40,6 +40,7 @@
 </head>
 
 <body>
+    <div class="page-container">
     <div class="top">
         <div class="banner">
             <img src="Source/Open sesame.png" alt="banner">
@@ -552,7 +553,7 @@ div.desc {
 
 
 
-
+</div>
 </body>
 
 </html>
