Add Another File

--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Contents/Home/HomeStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Calculate</title>
@@ -40,7 +41,6 @@
 </head>
 
 <body>
-    <div class="page-container">
     <div class="top">
         <div class="banner">
             <img src="Source/Open sesame.png" alt="banner">
@@ -553,7 +553,7 @@ div.desc {
 
 
 
-</div>
+
 </body>
 
 </html>
